@@ -1,3 +1,7 @@
+2007-05-30  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php: More phpdoc comments.
+
 2007-05-29  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php, class.*.inc.php:
